--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Tue Dec 10 11:35:39 UTC 2024
+#Sun Jan 05 02:41:10 UTC 2025
 enable-jmx-monitoring=false
 level-seed=
 rcon.port=25575
@@ -19,7 +19,7 @@ require-resource-pack=false
 max-players=20
 use-native-transport=true
 enable-status=true
-online-mode=true
+online-mode=false
 allow-flight=true
 broadcast-rcon-to-ops=true
 view-distance=10
